<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="wolvesden_summary_title">Customize your device</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="empty_title">Empty</string>
    <string name="normal_title">Normal</string>
    <string name="hidden_title">Hidden</string>
    <string name="position_title">Position</string>
    <string name="position_right_title">Right</string>
    <string name="position_centered_title">Centered</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="profiles_add">Add...</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="profile_reset_title">Reset</string>
    <string name="show_title">Show</string>
    <string name="colors_title">Colors</string>
    <string name="color_title">Color</string>
    <string name="reset_paranoid">Validus</string>
    <string name="reset_android">Android</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lock screen</string>
    <string name="heads_up_category">Heads up</string>
    <string name="statusbar_category">Status bar</string>
    <string name="navigation_category">Navigation</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="statusbar_notifications_category">Notifications</string>
    <string name="animations">Animations</string>
    <string name="misctweaks_category">Miscellany</string>
    <string name="button_settings">Button settings</string>
    <string name="carrier_label_category">Carrier label</string>
    <string name="statusbar_items_category">Indicators</string>
    <string name="nightmode_category">Night mode</string>
    <string name="quicksettings_category">Quick settings</string>
    <string name="recents_category">Recents</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="breathing_notifications_category">Breathing notifications</string>
    <string name="omniswitch_category">OmniSwitch</string>
    <string name="lockscreen_interface_category">Interface</string>
    <string name="weather_cat_lockscreen">Lock screen</string>
    <string name="qs_general_category">General tweaks</string>
    <string name="custom_wall_browse_title">Validus Wallpapers</string>
    <string name="custom_wall_browse_summary"></string>
    <string name="daynight_title">Theme resources</string>
    <string name="daynight_header_title">Theme resources</string>
    <string name="night_mode_title">Project theme</string>
    <string name="night_mode_summary">%s</string>
    <string name="night_mode_no">Light</string>
    <string name="night_mode_yes">Validus dark</string>
    <string name="night_mode_retro">Go Retro</string>
    <string name="night_mode_auto">Automatic</string>
    <string name="keywords_display_night_mode">dark theme night mode dim screen invert brightness</string>
    <string name="doze_notification_color_invert_title">Ambient notification inversion</string>
    <string name="doze_notification_color_invert_summary_off">Ambient notifications will not be inverted</string>
    <string name="doze_notification_color_invert_summary_on">Ambient notifications will be inverted</string>
   <string name="notification_tint_title">Dynamic notification title color</string>
   <string name="notification_tint_summary_off">Title color on notification will be handled by the theme</string>
   <string name="notification_tint_summary_on">Title color on notification will be taken from app icon color</string>
    <string name="tuner_full_zen_title">Do not disturb switch</string>
    <string name="tuner_full_zen_summary">Show a do not disturb switch in the volume panel</string>
    <string name="home_button_wake_title">Home button wake</string>
    <string name="home_button_wake_summary">Pressing the home button will wake your device</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
    <string name="keyguard_torch_title">Torch quick toggle</string>
    <string name="keyguard_torch_summary">Long-press power button while screen is off to turn on flashlight</string>
    <string name="aosp_recents_title">AOSP recents</string>
    <string name="omniswitch_recents_title">OmniSwitch recents</string>
    <string name="recents_use_omniswitch_title">Use for a recents alterative</string>
    <string name="recents_use_omniswitch_summary">Use OmniSwitch instead of the default recents view</string>
    <string name="omniswitch_start_settings_title">OmniSwitch settings</string>
    <string name="omniswitch_start_settings_summary">View the settings for OmniSwitch</string>
    <string name="omniswitch_first_time_title">Warning</string>
    <string name="omniswitch_first_time_message">If using OmniSwitch as recents alterative, make sure you have OmniSwitch enabled</string>
    <string name="powermenu_category">Power menu</string>
    <string name="powermenu_lockscreen_title">Power menu on lock screen</string>
    <string name="powermenu_lockscreen_summary">Show power menu on the lock screen</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_screenrecord">Screen record</string>
    <string name="powermenu_torch">Torch</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock now</string>
    <string name="power_menu_onthego_title">On-The-Go</string>
    <string name="powermenu_soundpanel">Sound panel</string>
    <string name="powermenu_dialog_dim">Dialog dim background amount</string>
    <string name="power_menu_animation_title">Animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="power_menu_animation_aosp">AOSP (default)</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the Quick Settings panel</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="missed_call_breath_title">Breathing Missed Call</string>
    <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect in the status bar</string>
    <string name="voicemail_breath_title">Breathing Voicemail</string>
    <string name="voicemail_breath_summary">Will give your voicemail notifications a breathing effect in the status bar</string>
    <string name="sms_breath_title">Breathing SMS</string>
    <string name="sms_breath_summary">Will give your SMS notifications a breathing effect in the status bar</string>
    <string name="power_notification_controls_title">Power notification controls</string>
    <string name="power_notification_controls_summary">Select importance level for notifications</string>
    <string name="force_expanded_notifications_title">Force expanded notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Disable immersive mode messages</string>
    <string name="disable_immersive_message_summary">This will hide all immersive mode messages</string>
    <string name="qs_easy_toggle_title">Advanced QS easy toggle</string>
    <string name="qs_easy_toggle_summary">Enable one tap action to enable/disable mobile data, wifi, location and bluetooth</string>
    <string name="quicksettings_tiles_category">Tile animation options</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="status_bar_clock">Clock &amp; date</string>
    <string name="lockscreen_targets_title">Bottom L/R shortcuts</string>
    <string name="status_bar_battery_style_category">Battery indicator</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="summary_heads_up_enabled">Peeking notifications are enabled</string>
    <string name="summary_heads_up_disabled">Peeking notifications are disabled</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="lockscreen_shortcuts_category">Shortcuts</string>
    <string name="lockscreen_gestures_category">Gestures</string>
    <string name="lockscreen_shortcuts_title">Screen shortcuts</string>
    <string name="lockscreen_shortcuts_summary">Add shortcuts to the center</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lock screen</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="status_bar_temperature_title">Weather temperature</string>
    <string name="status_bar_custom_header_title">Custom header image</string>
    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
    <string name="daylight_header_pack_title">Header image pack</string>
    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary">Long press on any image to use for static mode</string>
    <string name="weather_title">Weather</string>
    <string name="weather_config_summary">Configure the weather tile in the Quick Settings panel</string>
</resources>