<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/lockscreen_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory 
         android:title="@string/lockscreen_interface_category">

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="lockscreen_media_metadata"
        android:title="@string/media_art_title"
        android:summary="@string/media_art_summary"
        android:defaultValue="true" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="power_menu_lockscreen"
        android:title="@string/powermenu_lockscreen_title"
        android:summary="@string/powermenu_lockscreen_summary"
        android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory 
        android:title="@string/lockscreen_gestures_category">

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="keyguard_toggle_torch"
        android:title="@string/keyguard_torch_title"
        android:summary="@string/keyguard_torch_summary"
        android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory 
         android:title="@string/lockscreen_shortcuts_category">

    <PreferenceScreen
         android:key="lockscreen_shortcuts"
         android:fragment="com.gzr.wolvesden.fragments.ActionListViewSettings"
         android:summary="@string/lockscreen_shortcuts_summary"
         android:title="@string/lockscreen_shortcuts_title">
             <extra android:name="actionMode" android:value="4" />
             <extra android:name="maxAllowedActions" android:value="20" />
             <extra android:name="disableLongpress" android:value="true" />
             <extra android:name="useAppPickerOnly" android:value="true" />
    </PreferenceScreen>
  
    <PreferenceScreen
        android:title="@string/lockscreen_targets_title">
        <intent
           android:targetPackage="com.android.systemui"
           android:targetClass="com.android.systemui.validus.LockscreenShortcutsActivity" />
    </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
