<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

     <PreferenceScreen
        android:key="systemui_tuner_statusbar"
        android:title="@string/statusbar_items_category" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.TunerActivity" />
     </PreferenceScreen>

    <Preference
        android:key="statusbar_weather"
        android:title="@string/status_bar_temperature_title"
        android:fragment="com.gzr.wolvesden.fragments.StatusBarWeather" />

    <PreferenceScreen
        android:key="batterybar"
        android:fragment="com.gzr.wolvesden.fragments.BatteryBar"
        android:title="@string/battery_bar_title" />

     <PreferenceScreen
        android:key="status_bar_battery_style"
        android:title="@string/status_bar_battery_style_category"
        android:fragment="com.gzr.wolvesden.fragments.StatusbarBatteryStyle" />

     <Preference
        android:key="statusbarclock"
        android:fragment="com.gzr.wolvesden.fragments.StatusbarClock"
        android:title="@string/status_bar_clock" />

    <Preference
        android:key="carrier_label"
        android:fragment="com.gzr.wolvesden.fragments.CarrierLabel"
        android:title="@string/carrier_label_category" />

    <Preference
        android:key="statusbar_notifications"
        android:fragment="com.gzr.wolvesden.fragments.StatusbarNotifications"
        android:title="@string/statusbar_notifications_category" />

    <Preference
        android:key="quicksettings"
        android:fragment="com.gzr.wolvesden.fragments.QuickSettings"
        android:title="@string/quicksettings_category" />

    <Preference
        android:key="traffic"
        android:fragment="com.gzr.wolvesden.fragments.Traffic"
        android:title="@string/traffic_category" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="status_bar_brightness_control"
        android:title="@string/status_bar_toggle_brightness"
        android:summary="@string/status_bar_toggle_brightness_summary"
        android:defaultValue="false" />

    <com.gzr.wolvesden.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_to_sleep_title"
        android:summary="@string/double_tap_to_sleep_summary"
        android:defaultValue="true" />

</PreferenceScreen>
