<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015-2016 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quicksettings_category" >

    <com.gzr.tavern.preference.SystemSettingSwitchPreference
        android:key="status_bar_custom_header"
        android:title="@string/status_bar_custom_header_title"
        android:summary="@string/status_bar_custom_header_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="custom_header_provider"
        android:title="@string/custom_header_provider_title"
        android:persistent="false"
        android:entries="@array/custom_header_provider_entries"
        android:entryValues="@array/custom_header_provider_values"
        android:dependency="status_bar_custom_header" />

    <!-- TODO should be dependent ot provider type == daylight -->
    <ListPreference
        android:key="daylight_header_pack"
        android:title="@string/daylight_header_pack_title"
        android:persistent="false"
        android:dependency="status_bar_custom_header" />

    <PreferenceScreen
        android:key="custom_header_browse"
        android:title="@string/custom_header_browse_title"
        android:summary="@string/custom_header_browse_summary"
        android:dependency="status_bar_custom_header"
        android:persistent="false" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.omnirom.omnistyle"
                android:targetClass="org.omnirom.omnistyle.BrowseHeaderActivity" />
    </PreferenceScreen>

    <com.gzr.tavern.preference.CustomSeekBarPreference
        android:key="status_bar_custom_header_shadow"
        android:title="@string/status_bar_custom_header_shadow_title"
        android:summary="@string/status_bar_custom_header_shadow_summary"
        android:defaultValue="0"
        settings:max="100"
        settings:min="0"
        settings:units="%"
        android:persistent="false"
        android:dependency="status_bar_custom_header" />
 
    <PreferenceScreen
        android:key="qs_weather"
        android:title="@string/weather_title"
        android:summary="@string/weather_config_summary"
        android:fragment="com.gzr.tavern.fragments.OmniJawsSettings" />

    <!--<com.gzr.tavern.preference.SystemSettingSwitchPreference
        android:key="qs_quickbar_scroll_enabled"
        android:title="@string/qqs_scroll_title"
        android:summary="@string/qqs_scroll_summary"
        android:defaultValue="false"/> -->

    <com.gzr.tavern.preference.SecureSettingSwitchPreference
        android:key="qs_show_brightness"
        android:title="@string/qs_brightness_slider_title"
        android:summary="@string/qs_brightness_slider_summary"
        android:defaultValue="true"/>

    <com.gzr.tavern.preference.SystemSettingSwitchPreference
        android:key="qs_show_brightness_icon"
        android:title="@string/brightness_icon_title"
        android:summary="@string/brightness_icon_summary"
        android:dependency="qs_show_brightness"
        android:defaultValue="false"/>

    <com.gzr.tavern.preference.SecureSettingSwitchPreference
        android:key="qs_easy_toggle"
        android:title="@string/qs_easy_toggle_title"
        android:summary="@string/qs_easy_toggle_summary"
        android:defaultValue="false" />

    <com.gzr.tavern.preference.SecureSettingSwitchPreference
         android:key="qs_wifi_easy_toggle"
         android:title="@string/qs_wifi_easy_toggle_title"
         android:summary="@string/qs_wifi_easy_toggle_summary"
         android:defaultValue="false" />

    <PreferenceScreen
        android:key="status_bar_expanded_qs_settings"
        android:title="@string/status_bar_expanded_qs_settings"
        android:summary="@string/status_bar_expanded_qs_settings_summary"
        android:fragment="com.gzr.tavern.fragments.StatusbarExpandedQSSettings" />

    <ListPreference
        android:key="quick_pulldown"
        android:title="@string/quick_pulldown_title"
        android:entries="@array/quick_pulldown_entries"
        android:entryValues="@array/quick_pulldown_values"
        android:persistent="false" />

    <PreferenceCategory
        android:key="quicksettings_tiles_category"
        android:title="@string/quicksettings_tiles_category">

    <ListPreference
        android:key="qs_tile_animation_style"
        android:title="@string/qs_tile_animation_style_title"
        android:entries="@array/qs_tile_animation_style_entries"
        android:entryValues="@array/qs_tile_animation_style_values"
        android:persistent="false" />

    <ListPreference
        android:key="qs_tile_animation_duration"
        android:title="@string/qs_tile_animation_duration_title"
        android:entries="@array/qs_tile_animation_duration_entries"
        android:entryValues="@array/qs_tile_animation_duration_values"
        android:persistent="false" />

    <ListPreference
        android:key="qs_tile_animation_interpolator"
        android:title="@string/qs_tile_animation_interpolator_title"
        android:entries="@array/qs_tile_animation_interpolator_entries"
        android:entryValues="@array/qs_tile_animation_interpolator_values"
        android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
