<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/system_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

         <Preference
            android:key="powermenu"
            android:fragment="com.gzr.tavern.fragments.PowerMenu"
            android:layout="@layout/preference_powermenu"
            android:title="@string/powermenu_category" />

         <Preference
            android:key="expanded_desktop"
            android:fragment="com.android.settings.applications.ExpandedDesktopPreferenceFragment"
            android:layout="@layout/preference_expanded_desktop"
            android:title="@string/power_menu_expanded_desktop" />

        <PreferenceScreen
            android:key="animations"
            android:fragment="com.gzr.tavern.fragments.Animations"
            android:layout="@layout/preference_animations"
            android:title="@string/animations" />

        <PreferenceScreen
            android:key="density_changer"
            android:fragment="com.android.settings.util.Density"
            android:layout="@layout/preference_lcd_density"
            android:title="@string/lcd_density_title" />

        <PreferenceScreen
            android:key="custom_wall_browse"
            android:title="@string/custom_wall_browse_title"
            android:summary="@string/custom_wall_browse_summary"
            android:layout="@layout/preference_custom_wall"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnistyle"
                    android:targetClass="org.omnirom.omnistyle.BrowseWallsActivity" />
        </PreferenceScreen>

</PreferenceScreen>
